plugins {
    id 'java'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
}

group = 'com.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.8.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    
    // Finnhub API for stock data
    implementation 'io.finnhub:kotlin-client:2.0.20'
    
    // JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    
    // HTTP client for API calls
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    
    // Logging
    implementation 'org.slf4j:slf4j-simple:2.0.7'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

application {
    mainClass = 'com.example.Main'
}

tasks.named('test') {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

kotlin {
    jvmToolchain(17)
}
